fix progress bar to my liking, will need to fix collapse function

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,11 @@
 nav.navbar.navbar-default {
   margin-bottom: 0;
 }
+
+.nav-item {
+  margin: 15px
+}
+
+ul {
+  list-style-type: none;
+}
